--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,7 +3,7 @@
 @import 'libs/mixins';
 @import '../css/font-awesome.min.css';
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
-
+@import url('https://fonts.googleapis.com/css?family=Courgette');
 /*
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -63,6 +63,11 @@
 		font-weight: _font(weight);
 		line-height: 1.75em;
 	}
+	#major {
+		font-family: 'Courgette', cursive;
+		color: black;
+		font-size: 40pt;
+	}
 
 	a {
 		@include vendor('transition', ('color #{_duration(transition)} ease-in-out', 'border-color #{_duration(transition)} ease-in-out'));
@@ -91,7 +96,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: _palette(fg-bold);
+		// color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
 		line-height: 1em;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
@@ -472,7 +477,7 @@
 				border-radius: _size(border-radius);
 				border: solid 3px rgba(255,255,255,0.5);
 				color: #fff;
-				content: 'View';
+				content: 'Zoom In';
 				display: inline-block;
 				font-size: 0.8em;
 				font-weight: _font(weight-bold);
@@ -533,6 +538,7 @@
 
 			img {
 				width: 100%;
+				height: 100%;
 			}
 		}
 
@@ -590,10 +596,11 @@
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
+			padding-bottom: -2em;
 
 			li {
 				display: inline-block;
-				padding: 0 1em 0 0;
+				padding: 0 2em 0 0;
 
 				&:last-child {
 					padding-right: 0;
@@ -601,7 +608,7 @@
 
 				.icon {
 					&:before {
-						font-size: 1.5em;
+						font-size: 2em;
 					}
 				}
 			}
@@ -790,6 +797,10 @@
 		}
 	}
 
+	.projectDiscription {
+		text-align: center;
+	}
+
 /* Button */
 
 	input[type="submit"],
@@ -943,8 +954,13 @@
 
 		.image.avatar {
 			margin: 0 0 (_size(element-margin) * 0.5) 0;
-			width: 6.25em;
+			width: 8em;
 		}
+	}
+
+	.contact-img {
+		width: 50px;
+		margin: 20px;
 	}
 
 /* Footer */
@@ -954,7 +970,7 @@
 			margin: (_size(element-margin) * 0.5) 0 0 0;
 
 			a {
-				color: _palette(accent2, fg-light);
+				color: white;
 			}
 		}
 
